# mycon

./: .gitignore  .save.cson  Cargo.toml  Taskfile.yml  dc_master.yaml  makefile  readme.md
config/: args.yaml  mycon.yaml
docker/: cargo-config.toml  dockerfile  drun.sh  sudoers
src/: argparse.rs  args.tpl  args.yaml  channelize.rs  env.rs  fetch.rs  fetch_ip.rs  main.rs  print.rs  requester.rs  services_file_reader.rs  services_list.json  util.rs
tests/: service_file_reader.rs
