[package]
name = "mycon"
version = "0.1.0"
authors = ["olaf michaelis <o.mic@web.de>"]


[dependencies]
# requester
futures = "0.1.23"
hyper = "0.12.6"
hyper-tls = "0.3.0"
tokio-core = "0.1.17"

# serde json
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0"
reqwest = "0.8.6"

# rx
regex = "1.0.0"

# olibs = { path = "../libraries/olibs/"}
